data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1794.wast
;; 5. **Test Description**:    - **Test Name**: Dynamic Function Call with Conditional Branch (call_indirect)    - **Description**: Test a `call_indirect` instruction followed by a `br_if` that branches based on the dynamic function call's return value.    - **Constraint Check**: Ensures that the `call_indirect` correctly evaluates the branch condition.    - **Improper Handling**: Checks for incorrect dynamic function table lookup or improper condition evaluation.

(assert_invalid
 (module
  (table funcref (elem $func1 $func2))
  (type $t (func (result i32)))
  (func $func1 (result i32) (i32.const 1))
  (func $func2 (result i32) (i32.const 0))
  (func (param i32)
   (block (br_if 0 (call_indirect (type $t) (local.get 0))))
  )
 )
 "type mismatch"
)